--- a/wp-content/themes/teamlab-blog-2-0/languages/de_DE.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/de_DE.po
@@ -840,21 +840,13 @@ msgstr ""
 msgid "(Edit)"
 msgstr "(Bearbeiten)"
 
-#: wp-content/themes/teamlab-blog-2-0/header.php:117
-msgid "Discover <b>ONLYOFFICE Docs v7.2</b> with plugin marketplace, new form fields, live viewer, ligatures, <br> updated UI, and more"
-msgstr "Entdecken Sie <b>ONLYOFFICE Docs v7.2</b> mit einem Marketplace von Plugins, neuen Formularfeldern, Live-Viewer, Ligaturen, <br> aktualisierter Benutzeroberfläche und mehr"
-
-#: wp-content/themes/teamlab-blog-2-0/header.php:124
-msgid "<b>ONLYOFFICE Docs v7.2</b>"
-msgstr "<b>Entdecken Sie ONLYOFFICE Docs v7.2</b>"
-
 #: wp-content/themes/teamlab-blog-2-0/header.php:120
-msgid "Meet <b>ONLYOFFICE Docs Cloud</b>, complete office software as a service"
-msgstr "Begrüßen Sie <b>ONLYOFFICE Docs Cloud</b>, eine umfassende SaaS-Bürolösung"
+msgid "<b>ONLYOFFICE Docs v7.3 released:</b> enhanced forms, SmartArt, new security settings, Watch Window, and more"
+msgstr "<b>ONLYOFFICE Docs v7.3 veröffentlicht:</b> verbesserte Formulare, SmartArt, neue Sicherheitseinstellungen, Überwachungsfenster und mehr"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:129
-msgid "Meet <b>ONLYOFFICE Docs Cloud</b>"
-msgstr "Begrüßen Sie <b>ONLYOFFICE Docs Cloud</b>"
+msgid "<b>ONLYOFFICE Docs v7.3 released</b>"
+msgstr "<b>ONLYOFFICE Docs v7.3 veröffentlicht</b>"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:152
 #: wp-content/themes/teamlab-blog-2-0/searchform.php:9
