--- a/wp-content/themes/teamlab-blog-2-0/languages/es_ES.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/es_ES.po
@@ -850,21 +850,13 @@ msgstr ""
 msgid "(Edit)"
 msgstr "(Editar)"
 
-#: wp-content/themes/teamlab-blog-2-0/header.php:117
-msgid "Discover <b>ONLYOFFICE Docs v7.2</b> with plugin marketplace, new form fields, live viewer, ligatures, <br> updated UI, and more"
-msgstr "Descubre <b>ONLYOFFICE Docs v7.2</b> con un marketplace de plugins, nuevos campos de formulario, visor en vivo, ligaduras, <br> interfaz de usuario actualizada y mucho más"
-
-#: wp-content/themes/teamlab-blog-2-0/header.php:124
-msgid "<b>ONLYOFFICE Docs v7.2</b>"
-msgstr "<b>Descubre ONLYOFFICE Docs v7.2</b>"
-
 #: wp-content/themes/teamlab-blog-2-0/header.php:120
-msgid "Meet <b>ONLYOFFICE Docs Cloud</b>, complete office software as a service"
-msgstr "Descubre <b>ONLYOFFICE Docs Cloud</b>, un completo software ofimático ofrecido como servicio"
+msgid "<b>ONLYOFFICE Docs v7.3 released:</b> enhanced forms, SmartArt, new security settings, Watch Window, and more"
+msgstr "<b>Lanzamiento de ONLYOFFICE Docs v7.3:</b> formularios mejorados, SmartArt, nueva configuración de seguridad, Ventana de inspección, etc."
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:129
-msgid "Meet <b>ONLYOFFICE Docs Cloud</b>"
-msgstr "Descubre <b>ONLYOFFICE Docs Cloud</b>"
+msgid "<b>ONLYOFFICE Docs v7.3 released</b>"
+msgstr "<b>Lanzamiento de ONLYOFFICE Docs v7.3</b>"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:152
 #: wp-content/themes/teamlab-blog-2-0/searchform.php:9
