--- a/wp-content/themes/teamlab-blog-2-0/languages/fr_FR.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/fr_FR.po
@@ -845,21 +845,13 @@ msgstr ""
 msgid "(Edit)"
 msgstr "(Éditer)"
 
-#: wp-content/themes/teamlab-blog-2-0/header.php:117
-msgid "Discover <b>ONLYOFFICE Docs v7.2</b> with plugin marketplace, new form fields, live viewer, ligatures, <br> updated UI, and more"
-msgstr "Découvrez <b>ONLYOFFICE Docs v7.2</b> avec marketplace de plugins, nouveaux champs de formulaires, visionneuse en direct, <br> ligatures, interface utilisateur mise à jour, et plus encore"
-
-#: wp-content/themes/teamlab-blog-2-0/header.php:124
-msgid "<b>ONLYOFFICE Docs v7.2</b>"
-msgstr "<b>Découvrir ONLYOFFICE Docs v7.2</b>"
-
 #: wp-content/themes/teamlab-blog-2-0/header.php:120
-msgid "Meet <b>ONLYOFFICE Docs Cloud</b>, complete office software as a service"
-msgstr "Découvrez <b>ONLYOFFICE Docs Cloud</b>, un logiciel de bureautique complet fourni sous forme de service."
+msgid "<b>ONLYOFFICE Docs v7.3 released:</b> enhanced forms, SmartArt, new security settings, Watch Window, and more"
+msgstr "<b>Sortie de ONLYOFFICE Docs v7.3 :</b> formulaires améliorés, SmartArt, nouveaux paramètres de sécurité, fenêtre de surveillance, etc."
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:129
-msgid "Meet <b>ONLYOFFICE Docs Cloud</b>"
-msgstr "Découvrir <b>ONLYOFFICE Docs Cloud</b>"
+msgid "<b>ONLYOFFICE Docs v7.3 released</b>"
+msgstr "<b>ONLYOFFICE Docs v7.3 est mis à jour</b>"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:152
 #: wp-content/themes/teamlab-blog-2-0/searchform.php:9
