--- a/wp-content/themes/teamlab-blog-2-0/languages/zh_CN.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/zh_CN.po
@@ -1425,21 +1425,13 @@ msgstr ""
 msgid "(Edit)"
 msgstr "（编辑）"
 
-#: wp-content/themes/teamlab-blog-2-0/header.php:117
-msgid "Discover <b>ONLYOFFICE Docs v7.2</b> with plugin marketplace, new form fields, live viewer, ligatures, <br> updated UI, and more"
-msgstr "了解 <b>ONLYOFFICE 文档 v7.2</b>，包括插件市场、全新表单字段、实时查看器、连写、 <br> UI 更新等"
-
-#: wp-content/themes/teamlab-blog-2-0/header.php:124
-msgid "<b>ONLYOFFICE Docs v7.2</b>"
-msgstr "<b>了解 ONLYOFFICE 文档 v7.2</b>"
-
 #: wp-content/themes/teamlab-blog-2-0/header.php:120
-msgid "Meet <b>ONLYOFFICE Docs Cloud</b>, complete office software as a service"
-msgstr "了解 <b>ONLYOFFICE 文档云版本</b>，为您提供了现成的办公软件即服务"
+msgid "<b>ONLYOFFICE Docs v7.3 released:</b> enhanced forms, SmartArt, new security settings, Watch Window, and more"
+msgstr "<b>ONLYOFFICE 文档 v7.3 现已发布：</b>增强的表单、SmartArt、全新安全性设置、查看窗口等功能"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:129
-msgid "Meet <b>ONLYOFFICE Docs Cloud</b>"
-msgstr "了解 <b>ONLYOFFICE 文档云版本</b>"
+msgid "<b>ONLYOFFICE Docs v7.3 released</b>"
+msgstr "<b>ONLYOFFICE 文档 v7.3 现已发布</b>"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:152 wp-content/themes/teamlab-blog-2-0/searchform.php:9
 msgid "Find news, tips and how-tos"
