--- a/wp-content/themes/teamlab-blog-2-0/languages/cs_CZ.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/cs_CZ.po
@@ -704,6 +704,26 @@ msgstr ""
 msgid "Add comment"
 msgstr ""
 
+#: wp-content/themes/teamlab-blog-2-0/comments.php:73
+msgid "Name is empty"
+msgstr "Jméno je prázdné"
+
+#: wp-content/themes/teamlab-blog-2-0/comments.php:78
+msgid "Email is empty"
+msgstr "Pole pro e-mail je prázdné"
+
+#: wp-content/themes/teamlab-blog-2-0/comments.php:79
+msgid "Email is incorrect"
+msgstr "Nesprávný e-mail"
+
+#: wp-content/themes/teamlab-blog-2-0/comments.php:89
+msgid "Message is empty"
+msgstr ""
+
+#: wp-content/themes/teamlab-blog-2-0/comments.php:89
+msgid "Wrong captcha"
+msgstr "Recaptcha je nesprávný"
+
 #: wp-content/themes/teamlab-blog-2-0/download-block.php:3
 msgid "Download ONLYOFFICE desktop and mobile apps for"
 msgstr ""
@@ -893,14 +913,6 @@ msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:393 wp-content/themes/teamlab-blog-2-0/subscribe-blue.php:17
 msgid "Subscribe"
-msgstr ""
-
-#: wp-content/themes/teamlab-blog-2-0/header.php:396 wp-content/themes/teamlab-blog-2-0/subscribe-blue.php:22
-msgid "Email is empty"
-msgstr ""
-
-#: wp-content/themes/teamlab-blog-2-0/header.php:397 wp-content/themes/teamlab-blog-2-0/subscribe-blue.php:23
-msgid "Email is incorrect"
 msgstr ""
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:399 wp-content/themes/teamlab-blog-2-0/subscribe-blue.php:24
