--- a/wp-content/themes/teamlab-blog-2-0/languages/es_ES.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/es_ES.po
@@ -875,12 +875,12 @@ msgid "(Edit)"
 msgstr "(Editar)"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:120
-msgid "<b>ONLYOFFICE Docs v7.3 released:</b> enhanced forms, SmartArt, new security settings, Watch Window, and more"
-msgstr "<b>Lanzamiento de ONLYOFFICE Docs v7.3:</b> formularios mejorados, SmartArt, nueva configuración de seguridad, Ventana de inspección, etc."
+msgid "<b>ONLYOFFICE Workspace 12.5:</b> enhanced security, optimized document management, Dark theme, and more"
+msgstr "<b>ONLYOFFICE Workspace 12.5:</b> seguridad mejorada, gestión de documentos optimizada, tema oscuro y mucho más"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:129
-msgid "<b>ONLYOFFICE Docs v7.3 released</b>"
-msgstr "<b>Lanzamiento de ONLYOFFICE Docs v7.3</b>"
+msgid "<b>ONLYOFFICE Workspace 12.5</b> released"
+msgstr "Lanzamiento de <b>ONLYOFFICE Workspace 12.5</b>"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:152
 #: wp-content/themes/teamlab-blog-2-0/searchform.php:9
