--- a/wp-content/themes/teamlab-blog-2-0/languages/fr_FR.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/fr_FR.po
@@ -858,12 +858,12 @@ msgid "(Edit)"
 msgstr "(Éditer)"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:120
-msgid "<b>ONLYOFFICE Docs v7.3 released:</b> enhanced forms, SmartArt, new security settings, Watch Window, and more"
-msgstr "<b>Sortie de ONLYOFFICE Docs v7.3 :</b> formulaires améliorés, SmartArt, nouveaux paramètres de sécurité, fenêtre de surveillance, etc."
+msgid "<b>ONLYOFFICE Workspace 12.5:</b> enhanced security, optimized document management, Dark theme, and more"
+msgstr "<b>ONLYOFFICE Workspace 12.5 :</b> sécurité renforcée, gestion des documents optimisée, thème sombre, et plus encore"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:129
-msgid "<b>ONLYOFFICE Docs v7.3 released</b>"
-msgstr "<b>ONLYOFFICE Docs v7.3 est mis à jour</b>"
+msgid "<b>ONLYOFFICE Workspace 12.5</b> released"
+msgstr "Sortie <b>d'ONLYOFFICE Workspace 12.5</b>"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:152
 #: wp-content/themes/teamlab-blog-2-0/searchform.php:9
