--- a/wp-content/themes/teamlab-blog-2-0/languages/ja_JP.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/ja_JP.po
@@ -1233,12 +1233,12 @@ msgid "(Edit)"
 msgstr "（編集）"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:120
-msgid "<b>ONLYOFFICE Docs v7.3 released:</b> enhanced forms, SmartArt, new security settings, Watch Window, and more"
-msgstr "<b>ONLYOFFICE Docs v7.3リリース：</b>フォームの強化、SmartArt、新しいセキュリティ設定、ウォッチウィンドウなど"
+msgid "<b>ONLYOFFICE Workspace 12.5:</b> enhanced security, optimized document management, Dark theme, and more"
+msgstr "<b>ONLYOFFICE Workspace 12.5：</b>セキュリティ強化、文書管理の最適化、ダークテーマなど"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:129
-msgid "<b>ONLYOFFICE Docs v7.3 released</b>"
-msgstr "<b>ONLYOFFICE Docs v7.3がリリース</b>"
+msgid "<b>ONLYOFFICE Workspace 12.5</b> released"
+msgstr "<b>ONLYOFFICE Workspace 12.5</b> がリリースされました"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:152 wp-content/themes/teamlab-blog-2-0/searchform.php:9
 msgid "Find news, tips and how-tos"
