--- a/wp-content/themes/teamlab-blog-2-0/languages/zh_CN.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/zh_CN.po
@@ -1448,12 +1448,12 @@ msgid "(Edit)"
 msgstr "（编辑）"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:120
-msgid "<b>ONLYOFFICE Docs v7.3 released:</b> enhanced forms, SmartArt, new security settings, Watch Window, and more"
-msgstr "<b>ONLYOFFICE 文档 v7.3 现已发布：</b>增强的表单、SmartArt、全新安全性设置、查看窗口等功能"
+msgid "<b>ONLYOFFICE Workspace 12.5:</b> enhanced security, optimized document management, Dark theme, and more"
+msgstr "<b>ONLYOFFICE 工作区 v12.5：</b>安全增强，文档管理优化，深色主题等等"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:129
-msgid "<b>ONLYOFFICE Docs v7.3 released</b>"
-msgstr "<b>ONLYOFFICE 文档 v7.3 现已发布</b>"
+msgid "<b>ONLYOFFICE Workspace 12.5</b> released"
+msgstr "<b>ONLYOFFICE 工作区 v12.5</b> 现已发布"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:152 wp-content/themes/teamlab-blog-2-0/searchform.php:9
 msgid "Find news, tips and how-tos"
