--- a/wp-content/themes/teamlab-blog-2-0/languages/cs_CZ.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/cs_CZ.po
@@ -301,12 +301,12 @@ msgid "Hosting providers"
 msgstr "Poskytovatelé hostingu"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:120
-msgid "<b>ONLYOFFICE Workspace 12.5:</b> enhanced security, optimized document management, Dark theme, and more"
-msgstr "<b>ONLYOFFICE Workspace 12.5:</b> enhanced security, optimized document management, Dark theme, and more"
+msgid "<b>ONLYOFFICE DocSpace released:</b> improve document collaboration with offices, customers, and partners. <b>Use it for free!</b>"
+msgstr "<b>Vydán ONLYOFFICE DocSpace:</b> zlepšuje spolupráci na dokumentech s kancelářemi, zákazníky a partnery. <b>Používejte jej zdarma!</b>"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:129
-msgid "<b>ONLYOFFICE Workspace 12.5</b> released"
-msgstr "<b>ONLYOFFICE Workspace 12.5</b> released"
+msgid "<b>ONLYOFFICE DocSpace</b> released"
+msgstr "Vydán <b>ONLYOFFICE DocSpace</b>"
 
 #: wp-content/themes/teamlab-blog-2-0/ampforwp/header.php:71 wp-content/themes/teamlab-blog-2-0/footer.php:108
 msgid "Government"
