--- a/wp-content/themes/teamlab-blog-2-0/languages/es_ES.po
+++ b/wp-content/themes/teamlab-blog-2-0/languages/es_ES.po
@@ -875,12 +875,12 @@ msgid "(Edit)"
 msgstr "(Editar)"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:120
-msgid "<b>ONLYOFFICE Workspace 12.5:</b> enhanced security, optimized document management, Dark theme, and more"
-msgstr "<b>ONLYOFFICE Workspace 12.5:</b> seguridad mejorada, gestión de documentos optimizada, tema oscuro y mucho más"
+msgid "<b>ONLYOFFICE DocSpace released:</b> improve document collaboration with offices, customers, and partners. <b>Use it for free!</b>"
+msgstr "<b>Se ha lanzado ONLYOFFICE DocSpace:</b> mejora la colaboración en documentos con oficinas, clientes y socios. <b>¡Utilízalo gratis!</b>"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:129
-msgid "<b>ONLYOFFICE Workspace 12.5</b> released"
-msgstr "Lanzamiento de <b>ONLYOFFICE Workspace 12.5</b>"
+msgid "<b>ONLYOFFICE DocSpace</b> released"
+msgstr "Se ha lanzado <b>ONLYOFFICE DocSpace</b>"
 
 #: wp-content/themes/teamlab-blog-2-0/header.php:152
 #: wp-content/themes/teamlab-blog-2-0/searchform.php:9
